Fix problem with height on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -30,6 +30,7 @@ body
 .App
      padding: 4px
      height: 100vh
+     height: var(--window-height)
 
      @include mixins.media-lg
           padding: 20px
