--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -2,3 +2,5 @@ $blue: #4796CE
 $brown: #D2AD9A
 $white: white
 $dark: #1f2631
+
+$bg-color: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2))
